# Tets_ICE

./: CMakeLists.txt  README.md  main.cpp
include/: ConsoleWriter.h  Engine.h  IOWriter.h  InternalCombustionEngine.h  TestStand.h  TestStandICE.h  defaultData.h
src/: ConsoleWriter.cpp  InternalCombustionEngine.cpp  TestStandICE.cpp
